// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the user resolvers when the user context is set can get the current user 1`] = `
Object {
  "domain": "",
  "email": "david@codefly.ninja",
  "id": 1,
}
`;

exports[`the user resolvers when the user context is set can resolve all users 1`] = `
Array [
  Object {
    "domain": "",
    "email": "david@codefly.ninja",
    "id": 1,
  },
  Object {
    "domain": "",
    "email": "david@codefly.ninja",
    "id": 1,
  },
]
`;
